--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   , initial-scale=1.0"
     />
     <title>Título de la página</title>
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
     <div class="main">
